--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <body>
 <center><h1> UNIVERSIDAD NACIONAL DE CHIMBORAZO</h1></center>
 <center><h1> FACULTAD DE INGENIERIA</h1></center>
+<center><h1> FACULTAD DEuuuuuuuuuuuuuuuu INGENIERIA</h1></center>
 <center><h1> ESCUELA DE ELECTRONICA Y TELECOMUNICACIONES</h1></center>
 
 <!--<h2>Sumas y Resta</h1>-->
