--- a/templates/index.html
+++ b/templates/index.html
@@ -8,29 +8,20 @@
 <body>
 <center><h1> UNIVERSIDAD NACIONAL DE CHIMBORAZO</h1></center>
 <center><h1> FACULTAD DE INGENIERIA</h1></center>
-<center><h1> FACULTAD DEuuuuuuuuuuuuuuuu INGENIERIA</h1></center>
 <center><h1> ESCUELA DE ELECTRONICA Y TELECOMUNICACIONES</h1></center>
 
-<!--<h2>Sumas y Resta</h1>-->
-<!--<h2 id "n1">5000</h2>-->
-<!--<h2 id "n2">3000</h2>-->
+<h2>Sumas y Resta</h1>
+<h2> Primer  NUMERO :<h2 id "n1">1000</h2>
+<h2> Segundo  NUMERO :<h2 id "n2">4000</h2>
 <center><img src "static/images/test.jpg" alt ="user"></center>
-<h2> LUZ NUMERO 1</>
-<button id = 'cd1'type="button" onclick="ENDEDIDO_1();">
-Encender</button>
-<button id = 'cd2'type="button" onclick="ENDEDIDO_2();">
-Apagar</button>
-<br />
-<h1>Estado del led 1:</h><h id="respuesta">--</h1>
-<br />
 
-<h2> LUZ NUMERO 2</>
-<button id = 'cd3'type="button" onclick="ENDEDIDO_1_1();">
-Encender</button>
-<button id = 'cd4'type="button" onclick="ENDEDIDO_2_2();">
-Apagar</button>
+<button id = 'cd1'type="button" onclick="SUMA;">
+Sumar</button>
+<button id = 'cd2'type="button" onclick="RESTA();">
+Restar</button>
 <br />
-<h1>Estado del led 2:</h><h id="respuesta2"></h1>
+<h2> Resultado:<h2 id "n1">-</h2>
+
 
 
 
